[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://textures/ui/ui_sheet.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/bestiary.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 241, 1, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 416, 64, 48, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 336, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 177, 196, 14, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 177, 212, 14, 8 )

[node name="Bestiary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
names = [ "purple", "green", "red", "yellow" ]
descriptions = [ "purple description", "green description", "red description", "yellow description" ]

[node name="Book" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.0
margin_right = 86.0
margin_bottom = 15.0
mouse_filter = 2

[node name="Background" type="TextureButton" parent="Book"]
margin_right = 30.0
margin_bottom = 30.0
texture_normal = SubResource( 1 )
stretch_mode = 2

[node name="HoverText" type="Label" parent="Book"]
visible = false
margin_left = 34.0
margin_top = 8.0
margin_right = 86.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.0823529, 0.0745098, 0.109804, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Bestiary"
align = 1
valign = 1

[node name="Pages" type="TextureRect" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 2
texture = SubResource( 2 )
stretch_mode = 3

[node name="Name" type="Label" parent="Pages"]
margin_left = 4.0
margin_top = 4.0
margin_right = 29.0
margin_bottom = 18.0
text = "Purple"
clip_text = true

[node name="Text" type="Label" parent="Pages"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 19.0
margin_right = -4.0
margin_bottom = -12.0
custom_fonts/font = ExtResource( 1 )
text = "Desription of drooplet"
autowrap = true
clip_text = true

[node name="Close" type="TextureButton" parent="Pages"]
margin_left = 29.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 19.0
texture_normal = SubResource( 3 )
stretch_mode = 2

[node name="PrevPage" type="TextureButton" parent="Pages"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -12.0
margin_right = 17.0
margin_bottom = -4.0
texture_normal = SubResource( 4 )
texture_hover = SubResource( 5 )
stretch_mode = 2
flip_h = true

[node name="NextPage" type="TextureButton" parent="Pages"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -12.0
margin_right = -3.0
margin_bottom = -4.0
texture_normal = SubResource( 4 )
texture_hover = SubResource( 5 )
stretch_mode = 2

[connection signal="mouse_entered" from="Book/Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="Book/Background" to="." method="_on_Background_mouse_exited"]
[connection signal="pressed" from="Book/Background" to="." method="_on_Book_pressed"]
[connection signal="pressed" from="Pages/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Pages/PrevPage" to="." method="_on_PrevPage_pressed"]
[connection signal="pressed" from="Pages/NextPage" to="." method="_on_NextPage_pressed"]
